# PAISKINTONE

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  computeStatsPaper.ipynb  data_paths.json  project_mel_spec.ipynb  pyproject.toml  requirements.txt
01_Prepare Data/: 01_generate_scan_tables.ipynb  02_make_tables.ipynb  03_add_fp_data.ipynb  ITA_raw.parquet  cleanupscannames.ipynb  import_ita.ipynb  pa_values_extracted.parquet  pa_values_extracted_all_meta.parquet  scan_table.parquet
Analysis/: calculate_clutter_features.ipynb  figure1.ipynb  figure2.ipynb  figure3.ipynb  figure3_tools.py  timeseries_clipping.ipynb  timeseries_clipping_output.parquet
Cleaned Pulse Ox/: SKIN01.csv  SKIN02.csv  SKIN03.csv  SKIN04.csv  SKIN05.csv  SKIN06.csv  SKIN07.csv  SKIN08.csv  SKIN09.csv  SKIN10.csv  SKIN11.csv  SKIN12.csv  SKIN13.csv  SKIN14.csv  SKIN15.csv  SKIN16.csv  SKIN18.csv  SKIN19.csv  SKIN20.csv  SKIN21.csv  SKIN22.csv  SKIN23.csv  SKIN24.csv  SKIN25.csv  SKIN26.csv  SKIN28.csv  SKIN29.csv  SKIN30.csv  SKIN31.csv  SKIN32.csv  SKIN33.csv  SKIN34.csv  SKIN35.csv  SKIN36.csv  SKIN37.csv  SKIN38.csv  SKIN39.csv  SKIN40.csv  SKIN41.csv  SKIN43.csv  (+2 more)
ColourimeterData/: 2023-06-22 15-04-13 - SKIN01.cmf  2023-06-23 14-22-05 - SKIN02.cmf  2023-06-26 13-51-49 - SKIN03.cmf  2023-06-27 12-45-43 - SKIN04.cmf  2023-06-27 14-18-36 - SKIN05.cmf  2023-06-29 12-47-48 - SKIN06.cmf  (+30 more)
PAISKINTONE Python Tools/paiskintonetools/: pyproject.toml
PAISKINTONE Python Tools/paiskintonetools/paiskintonetools/: __init__.py  correction_factor.py  stats.py  zoomeffect.py
(+71 files in other folders)
