[project]
name = "paiskintone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "image-similarity-measures>=0.3.5",
    "ipywidgets>=8.1.5",
    "jaxdf>=0.2.8",
    "jwave>=0.2.1",
    "loess>=2.1.2",
    "openpyxl>=3.1.5",
    "paiskintonetools",
    "palettable>=3.3.3",
    "patato>=0.6.0",
    "pmcx>=0.4.1",
    "pyarrow>=19.0.1",
    "scienceplots>=2.1.1",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[tool.uv.sources]
paiskintonetools = { path = "PAISKINTONE Python Tools/paiskintonetools", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.1.0",
]
